# McFly-rs

./: Cargo.toml  LICENSE  README.md
mcfly/: Cargo.toml
mcfly/benches/: encrypt_decrypt.rs
mcfly/src/: common.rs  lib.rs  swe.rs
